Window size/location are not properly saved in default start-up file #88384

Closed
opened 2021-05-18 23:23:40 +02:00 by zender · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Short description of error

Window size/location are not properly saved in multi window set ups

I save the default start up file like this:
saveas.jpg

and when i close blender and reopen I get this:
reopen.jpg

Exact steps for others to reproduce the error

  1. Get latest stable portable build
  2. Open blender, add a second window(not a main window!) Order and drag the windows in similar fashion as on the screenshots.
  3. Save default start up file
  4. Close blender and re-open
  5. Notice that the windows became slightly smaller and the main window now slightly overlaps the second window

Additional info

Has been present since version 2.83 and potentially earlier, had this problem on another computer aswell(the same monitor/tv however). The resolution of my screen is at 1080p but it is not a pc monitor, it is a tv technically. wide screen. Not sure if this matters but maybe it does. Perhaps this issue presents itself on single window sets up aswell( if the window is not fullscreen/maximized). I imagine it would go unnoticed in most cases. I often ignore this myself but at one point the overlap always starts screwing with me and then i'll drag the main window back.

Incase anyone wonders why, I sometimes drag the properties/outliner window down so i can show an internet browser or file explorer or whatever really in the top right of my screen. This is great for following tutorials and quick access to online reference material.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Short description of error** Window size/location are not properly saved in multi window set ups I save the default start up file like this: ![saveas.jpg](https://archive.blender.org/developer/F10124284/saveas.jpg) and when i close blender and reopen I get this: ![reopen.jpg](https://archive.blender.org/developer/F10124290/reopen.jpg) **Exact steps for others to reproduce the error** 1. Get latest stable portable build 2. Open blender, add a second window(not a main window!) Order and drag the windows in similar fashion as on the screenshots. 3. Save default start up file 4. Close blender and re-open 5. Notice that the windows became slightly smaller and the main window now slightly overlaps the second window **Additional info** Has been present since version 2.83 and potentially earlier, had this problem on another computer aswell(the same monitor/tv however). The resolution of my screen is at 1080p but it is not a pc monitor, it is a tv technically. wide screen. Not sure if this matters but maybe it does. Perhaps this issue presents itself on single window sets up aswell( if the window is not fullscreen/maximized). I imagine it would go unnoticed in most cases. I often ignore this myself but at one point the overlap always starts screwing with me and then i'll drag the main window back. Incase anyone wonders why, I sometimes drag the properties/outliner window down so i can show an internet browser or file explorer or whatever really in the top right of my screen. This is great for following tutorials and quick access to online reference material.
Author

Added subscriber: @aschellekens09

Added subscriber: @aschellekens09
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

This should be fixed in this patch: https://developer.blender.org/D10863

This should be fixed in this patch: https://developer.blender.org/D10863
Author

That's awesome. I tried downloading the 2.93 beta but i can't extract it because a few files throw up a "too long path" error. Even if i put it on a drive's main folder. Good to know it's already fixed though. Thank you!

That's awesome. I tried downloading the 2.93 beta but i can't extract it because a few files throw up a "too long path" error. Even if i put it on a drive's main folder. Good to know it's already fixed though. Thank you!
Member

Sorry, no this isn’t committed yet, but I’ll try to get it in for 3.0

Sorry, no this isn’t committed yet, but I’ll try to get it in for 3.0
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

@Harley : I assume this can be confirmed then? (since the matching patch is already in place)

@Harley : I assume this can be confirmed then? (since the matching patch is already in place)

This issue was referenced by 4fb052f08d

This issue was referenced by 4fb052f08dfd085bb0c9015add32a5d5063caf54
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Harley Acheson self-assigned this 2021-05-21 18:36:48 +02:00

This issue was referenced by 999f1f7504

This issue was referenced by 999f1f75045c38a63f960d29e8bc7b9fd19ad0e7
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88384
No description provided.